<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TVShowListingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints"
        android:orientation="vertical">

        <Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/stoner">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lista de Séries!"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginStart="30dp">
            </TextView>
        </Toolbar>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="100dp">

            <Button
                android:id="@+id/buttonThePunisher"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_weight="0"
                android:background="@color/stoner"
                android:text="@string/thePunisher"
                android:textColor="@color/white"
                android:textSize="17sp"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
                android:textAllCaps="false">
            </Button>

            <Button
                android:id="@+id/buttonFriends"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_weight="0"
                android:background="@color/stoner"
                android:text="@string/friends"
                android:textColor="@color/white"
                android:textSize="17sp"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
                android:textAllCaps="false">
            </Button>

            <Button
                android:id="@+id/buttonSandman"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_weight="0"
                android:background="@color/stoner"
                android:text="@string/sandman"
                android:textColor="@color/white"
                android:textSize="17sp"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
                android:textAllCaps="false">
            </Button>

            <Button
                android:id="@+id/buttonBojackHorseman"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_weight="0"
                android:background="@color/stoner"
                android:text="@string/bojackHorseman"
                android:textColor="@color/white"
                android:textSize="17sp"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
                android:textAllCaps="false">
            </Button>

            <Button
                android:id="@+id/buttonHellsing"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_weight="0"
                android:background="@color/stoner"
                android:text="@string/hellsing"
                android:textColor="@color/white"
                android:textSize="17sp"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
                android:textAllCaps="false">
            </Button>

        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>
